--- a/css/shop-cart.css
+++ b/css/shop-cart.css
@@ -1,4 +1,4 @@
-#shopping-cart-background-image {
+/* #shopping-cart-background-image {
   background-image: url(https://cdn.2kgames.com/web/account/newsletters/bg_civ6_skin.jpg);
   width: 100%;
   background-repeat: no-repeat;
@@ -73,9 +73,9 @@
 }
 
 @media only screen and (max-width: 1668px) {
-  /* .overlay {
+  .overlay {
     top: 40%;
-  } */
+  }
 
   .title-2k-login {
     display: none;
@@ -91,4 +91,107 @@
   .title-2k-login {
     display: none;
   }
+} */
+
+/* we used this style for final layout */
+.fixbg {
+  background-image: url("https://cdn.2kgames.com/web/account/newsletters/bg_civ6_skin.jpg");
+  width: 100%;
+  height: 6100px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  color: white;
+  background-attachment: fixed;
+  image-rendering: pixelated;
+}
+.barimageshop1 {
+  background-image: url("https://images.ctfassets.net/wn7ipiv9ue5v/45WwjtrctyANwUWsJpQ6ke/c060df75dab5a1bb1776a47ff9b520bf/Civ_Category_Header.png");
+  width: 100%;
+  height: 320px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  align-items: initial;
+  display: flex;
+  image-rendering: pixelated;
+  padding: none;
+}
+.pix {
+  image-rendering: pixelated;
+}
+.barimageshopc {
+  background: transparent;
+  width: 100%;
+  height: 620px;
+  margin-top: 100px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  align-items: initial;
+  display: flex;
+}
+.bgl2 {
+  background: linear-gradient(to right, black 5%, 30%, transparent 90%);
+  width: 110%;
+  height: 320px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  align-items: initial;
+  display: flex;
+}
+.bgl {
+  background: transparent;
+  height: 308px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  align-items: initial;
+  display: flex;
+}
+.spbartxt {
+  align-self: flex-end;
+  margin-bottom: 80px;
+  margin-left: 100px;
+  font-size: 1.1em;
+}
+.spbartxts {
+  align-self: flex-end;
+  margin-bottom: 80px;
+  text-align: center;
+  font-size: 1.1em;
+}
+.txt {
+  margin-top: 0px;
+}
+.shopcard {
+  width: 42vh;
+}
+.cardbg {
+  background-color: rgb(26, 26, 26);
+}
+.cards {
+  margin-top: -380px;
+}
+.hid {
+  display: none;
+}
+.cardtxt {
+  text-decoration: none;
+  color: seashell;
+}
+.mbb5 {
+  margin-bottom: 10vh;
+}
+.barimagesp {
+  width: 100%;
+  height: 1200px;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  align-items: flex-end;
+}
+.bldiv {
+  border: white 0 0 1px;
 }
