--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@
   background-size: cover;
   border-radius: 1px;
   border: 3px solid #eec736;
+  align-items: flex-end;
 }
 
 .heroCelebrate {
@@ -157,14 +158,20 @@
 }
 
 /********************************************************************* youtube modal content */
-
-.modal-content {
+.ctmclose {
+  background-color: #dda833;
+}
+.custom-modal-backdrop {
   position: sticky;
-  background-color: #fff transparent;
+  background-color: transparent;
   left: 50%;
   transform: translate(-15%, 20%);
   width: 150%;
   height: 300%;
+  border: none;
+}
+.nb {
+  border: none;
 }
 
 @media screen and (max-width: 836px) {
